@@ -1,3 +1,10 @@
+2008-05-07  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gconf/gconf-internals.c: (gconf_get_daemon_dir):
+	* gconf/gconf-sanity-check.c: (check_file_locking):
+	Patch from Frederic Crozat to allow override $TMPDIR.
+	Closes bug #497113.
+
 2008-05-07  Richard Hult  <richard@imendio.com>
 
 	* gconf/gconf-database.c (gconf_database_notify_listeners): Get
